--- a/index.html
+++ b/index.html
@@ -9,9 +9,22 @@
   <title>Estrelas do amanhã</title>
   
   <link rel="stylesheet" href="styles/index.css">
+
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+  <div id="app">
+    <main>
+      <div class="main-container">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt aspernatur, non id recusandae delectus asperiores, incidunt odio aut officia fugit labore. Ex id harum maxime pariatur doloribus, aliquam officiis nesciunt.
+      </div>
+    </main>
+
+    <aside>
+      <div class="aside-container">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia, excepturi dolorem cumque deserunt esse numquam, totam quis molestiae, ducimus aliquam earum a nulla eveniet sapiente nostrum sunt sed eos alias.
+      </div>
+    </aside>
+  </div>
 </body>
 </html>
