--- a/index.html
+++ b/index.html
@@ -16,13 +16,27 @@
   <div id="app">
     <main>
       <div class="main-container">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt aspernatur, non id recusandae delectus asperiores, incidunt odio aut officia fugit labore. Ex id harum maxime pariatur doloribus, aliquam officiis nesciunt.
+        <div class="back">
+          <img src="assets/icons/arrow-left-02.svg" alt="flecha apontando para a esquerda">
+          <span>Voltar</span>
+        </div>
+        <h1>Formulário de matrícula</h1>
+        <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.</p>
       </div>
+
+      
     </main>
 
     <aside>
       <div class="aside-container">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia, excepturi dolorem cumque deserunt esse numquam, totam quis molestiae, ducimus aliquam earum a nulla eveniet sapiente nostrum sunt sed eos alias.
+        <header>
+          <img src="assets/logo.svg" alt="quatro estrelas laranjas e o nome da escola Estrelas do Amanhã">
+          <h2>Porque cada momento de <span>aprendizado</span> conta</h2>
+          <p>
+            Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e estimulante.
+          </p>
+        </header>
+        <img src="assets/Illustration.svg" alt="Ilustração de uma professora com crianças prestando atenção">
       </div>
     </aside>
   </div>
