Configurando os inputs de data e select

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1>Formulário de matrícula</h1>
         <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.</p>
 
-        <form method="post" enctype="multipart/form-data"> /*avisa que pode receber arquivos*/
+        <form method="post" enctype="multipart/form-data"> <!-- avisa que pode receber arquivos -->
           <fieldset class="child-info">
             <legend>Informações da criança</legend>
             <div class="input-wrapper">
